linuxmuster-linbo (2.3.50-0) babo62; urgency=low

  * fixed user access rights for linuxmuster-win scripts on ntfs filesystems (#113).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 09 Jul 2019 09:58:40 +0200

linuxmuster-linbo (2.3.49-0) babo62; urgency=low

  * added warning to start.conf examples (#111) and translated them to english.
  * fixed linbo_cmd: mk_linefiboot has wrong return value (#109).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 08 Jul 2019 18:29:57 +0200

linuxmuster-linbo (2.3.48-0) babo62; urgency=low

  * Fix #110: linbo-multicast v7, increase port counter is faulty.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 06 Apr 2019 10:34:31 +0200

linuxmuster-linbo (2.3.47-0) babo62; urgency=low

  * Fix von Fix #108: sync+start fails with windows systems in offline mode.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 28 Mar 2019 14:24:53 +0100

linuxmuster-linbo (2.3.46-0) babo62; urgency=low

  * linbofs, linbo_cmd:
    - minor code beautifying.
    - Fix #108: sync+start fails with windows systems in offline mode.
  * lmn7 only:
    - Fix #89: update-linbofs warns and corrects unsecure permissions of ssh files,
      which differ from the standard.
    - postinst: Apply current server ip to start.conf examples on configured systems.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 27 Mar 2019 16:15:09 +0100

linuxmuster-linbo (2.3.45-0) babo62; urgency=low

  * lmn62: removed PubkeyAcceptedKeyTypes=+ssh-dss from ssh_config since it
    caused a bad configuration error.

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 15 Mar 2019 15:45:04 +0100

linuxmuster-linbo (2.3.44-0) babo62; urgency=low

  * implemented RestoreOpsiState start.conf option to add the ability to restore
    the state of opsi products after linbo sync (#107).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 14 Mar 2019 19:26:23 +0100

linuxmuster-linbo (2.3.43-0) babo62; urgency=low
